--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "bugs": {
     "url": "https://github.com/Chivova/js-homework-10-color-switch/issues"
   },
-  "homepage": "https://github.com/Chivova/js-homework-10-color-switch#readme",
+  "homepage": "https://github.com/Chivova/js-homework-10-color-switch",
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
+  },
+  "dependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
